# graduate_work

./: .gitignore  Makefile  README.md  docker-compose.yaml
auth_app/: .env-sample  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  patched.py  pyproject.toml  wsgi.py
auth_app/nginx/: Dockerfile  backend.conf  nginx.conf
auth_app/src/: __init__.py  app.db  config.py  constants.py  enums.py  permissions.py  proto.py  redis_utils.py  routes.py  uapi.py
auth_app/src/commands/: create_default_user.py  roles.py  superuser.py
auth_app/src/database/: db.py  models.py
auth_app/src/docs/: apispec_1.json
auth_app/src/kafka/: consume.py  consumer.py  events.py  registry.py
auth_app/src/kafka/handlers/: user_subscribed_event.py  user_subscription_events.py
auth_app/src/kafka/schemas/: base_event_schema.py  user_subscribed_event_schema.py  user_subscription_event_schemas.py
auth_app/src/protobuf/: common.proto  common_pb2.py  user.proto  user_pb2.py  user_pb2_grpc.py
auth_app/src/resources/: auth.py  jwt.py  log_history.py  oauth.py  roles.py  smoke.py  users.py
auth_app/src/schemas/: log_history.py  oauth.py  roles.py  social.py  users.py
auth_app/src/scripts/: start_kafka_consumer.sh  wait_to_start.sh
auth_app/src/services/: auth_service.py  log_history_service.py  oauth_service.py  roles_service.py  users_service.py
auth_app/src/tests/: conftest.py  constants.py
auth_app/src/tests/src/functional/: auth.py  roles.py  smoke.py  users.py
billing_app/: .env.dev  .env.example  .gitignore  Dockerfile  docker-compose.yaml  (+4 more)
(+49 files in other folders)
