[tool.poetry]
name = "auth_sprint_1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.6"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.1"
SQLAlchemy = "^1.4.23"
Flask-RESTful = "^0.3.9"
Flask-JWT-Extended = "^4.3.0"
marshmallow-sqlalchemy = "^0.26.1"
redis = "^3.5.3"
gevent = "^21.8.0"
flasgger = "^0.9.5"
Authlib = "^0.15.5"
requests = "^2.26.0"
grpcio-tools = "^1.41.0"
jaeger-client = "^4.8.0"
Flask-OpenTracing = "^1.1.0"
Flask-Limiter = "^1.4"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
isort = "^5.9.3"
pytest = "^6.2.5"
flake8-bugbear = "^21.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
